--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -26,6 +26,8 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
@@ -33,9 +35,8 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
-              <td><form class="form-inline" action="/urls/:id/delete" method="POST">
-                <div class="form-group mb-2">
-                  <button name=id value=<%= id %> style='background-color:white; border-color:red; color:red'type="submit" class="btn btn-primary">Delete</button></td>
+              <td><form class="form-inline" action=<%= `/urls/${id}`%> method="GET"><button name=id value=<%= id %> style='background-color:white; border-color:blue; color:blue'type="submit" class="btn btn-primary">Edit</button></form></td>
+              <td><form class="form-inline" action="/urls/:id/delete" method="POST"><button name=id value=<%= id %> style='background-color:white; border-color:red; color:red'type="submit" class="btn btn-primary">Delete</button></form></td>
                 </div>
               </form>
             </tr>
