--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -24,13 +24,13 @@
       </div>
       <div style=display:flex;align-items:center;justify-content:center;flex-direction:column; class="card-footer text-muted">
         <div><h5 style="font-size:32px">Edit</h5></div>
-        <form class="form-inline" action="/urls" method="POST">
+        <form class="form-inline" action="/urls/:id" method="POST">
           <div class="form-group mb-2">
             <label for="longURL">New URL:</label>
             <input
               class="form-control"
               type="text"
-              name="longURL"
+              name="<%= id %>"
               placeholder="http://"
               style="width: 300px; margin: 1em"
             />
