--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -30,11 +30,11 @@
             <input
               class="form-control"
               type="text"
-              name="<%= id %>"
+              name="newURL"
               placeholder="http://"
               style="width: 300px; margin: 1em"
             />
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button name='id' value =<%= id %> type="submit" class="btn btn-primary">Submit</button>
           </div>
         </form>
       </div>
